--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: 56px;
 	padding: 0;
-	background: #673AB7;
+	background: var(--col-acc-1);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 	z-index: 50;
 }
@@ -17,7 +17,7 @@
 	font-size: 24px;
 	line-height: 56px;
 	font-weight: 400;
-	color: #FFF;
+	color: var(--col-fg-dark);
 }
 
 .header nav {
@@ -27,22 +27,40 @@
 
 .header nav a {
 	display: inline-block;
+	position: relative;
 	height: 56px;
 	line-height: 56px;
 	padding: 0 15px;
 	min-width: 50px;
 	text-align: center;
-	background: rgba(255,255,255,0);
+	background: rgba(255, 255, 255, 0);
 	text-decoration: none;
-	color: #FFF;
+	color: var(--col-fg-dark);
 	will-change: background-color;
 }
 
-.header nav a:hover,
-.header nav a:active {
-	background: rgba(0,0,0,0.2);
+.header nav a::after {
+	content: '';
+	display: block;
+	position: relative;
+	top: -100%;
+	left: -15px;
+	background: rgba(0, 0, 0, 0.2);
+	clip-path: circle(0%);
+	height: 100%;
+	transition: clip-path 0.3s;
+	width: calc(100% + 30px);
 }
 
+.header nav a:hover::after {
+	clip-path: circle(75%);
+}
+
+/* .header nav a:hover, */
+/* .header nav a:active { */
+/* background: rgba(0, 0, 0, 0.2); */
+/* } */
+
 .header nav a.active {
-	background: rgba(0,0,0,0.4);
+	background: rgba(0, 0, 0, 0.2);
 }
