--- a/src/components/notebutton/style.css
+++ b/src/components/notebutton/style.css
@@ -1,10 +1,11 @@
 .note {
+	display: inline-block;
 	padding: 1em 1em 1em 1em;
 	height: calc(3em);
 	width: 15em;
 	/* border-bottom: 2mm solid var(--col-acc-3); */
 	border-bottom: 2mm solid;
-	border-image: linear-gradient(
+	/* border-image: linear-gradient(
 			to right,
 			#bcbcbc 0%,
 			#bcbcbc 25%,
@@ -15,10 +16,12 @@
 			#65c1ac 75%,
 			#65c1ac 100%
 		)
-		5;
+		5; */
 
 	line-height: 1em;
 	vertical-align: middle;
+	color: var(--col-fg-0);
+	text-decoration: none;
 }
 
 .note::after {
@@ -27,7 +30,7 @@
 	position: relative;
 	top: calc(-2em);
 	left: -1em;
-	background: rgba(0, 0, 0, 0.2);
+	background: rgba(0, 0, 0, 0.1);
 	clip-path: circle(0%);
 	height: 3em;
 	transition: clip-path 0.3s;
