--- a/src/routes/settings/style.css
+++ b/src/routes/settings/style.css
@@ -3,3 +3,15 @@
 	min-height: 100%;
 	width: 100%;
 }
+
+.padding {
+	margin-bottom: 1em;
+}
+
+.box {
+	width: 35em;
+	height: 15em;
+	border: solid 1px var(--col-fg-1);
+	overflow-y: scroll;
+	padding: 1em;
+}
